src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    NEWLINE

Grammar

Rule 0     S' -> program
Rule 1     program -> statement_list
Rule 2     statement_list -> statement
Rule 3     statement_list -> statement_list statement
Rule 4     statement -> declaration
Rule 5     statement -> broadcast_stmt
Rule 6     statement -> try_catch
Rule 7     statement -> if_stmt
Rule 8     statement -> cycle_stmt
Rule 9     statement -> NOTES
Rule 10    declaration -> YOUARE ID ASSIGNTO expression
Rule 11    broadcast_stmt -> BROADCAST broadcast_args
Rule 12    broadcast_args -> broadcast_arg
Rule 13    broadcast_args -> broadcast_args broadcast_arg
Rule 14    broadcast_arg -> STRING
Rule 15    broadcast_arg -> expression
Rule 16    try_catch -> TRY statement_list CATCH statement_list END
Rule 17    if_stmt -> IF condition statement_list END
Rule 18    if_stmt -> IF condition statement_list FALLBACK statement_list END
Rule 19    cycle_stmt -> CYCLE condition statement_list END
Rule 20    condition -> expression EQT expression
Rule 21    condition -> expression NEQT expression
Rule 22    condition -> expression LT expression
Rule 23    condition -> expression GT expression
Rule 24    condition -> expression LTE expression
Rule 25    condition -> expression GTE expression
Rule 26    expression -> expression PLUS term
Rule 27    expression -> expression MINUS term
Rule 28    expression -> term
Rule 29    term -> term TIMES factor
Rule 30    term -> term DIVIDE factor
Rule 31    term -> factor
Rule 32    factor -> base POWER factor
Rule 33    factor -> base
Rule 34    base -> NUMBER
Rule 35    base -> ID
Rule 36    base -> LT_PARENT expression RT_PARENT

Terminals, with rules where they appear

ASSIGNTO             : 10
BROADCAST            : 11
CATCH                : 16
CYCLE                : 19
DIVIDE               : 30
END                  : 16 17 18 19
EQT                  : 20
FALLBACK             : 18
GT                   : 23
GTE                  : 25
ID                   : 10 35
IF                   : 17 18
LT                   : 22
LTE                  : 24
LT_PARENT            : 36
MINUS                : 27
NEQT                 : 21
NEWLINE              : 
NOTES                : 9
NUMBER               : 34
PLUS                 : 26
POWER                : 32
RT_PARENT            : 36
STRING               : 14
TIMES                : 29
TRY                  : 16
YOUARE               : 10
error                : 

Nonterminals, with rules where they appear

base                 : 32 33
broadcast_arg        : 12 13
broadcast_args       : 11 13
broadcast_stmt       : 5
condition            : 17 18 19
cycle_stmt           : 8
declaration          : 4
expression           : 10 15 20 20 21 21 22 22 23 23 24 24 25 25 26 27 36
factor               : 29 30 31 32
if_stmt              : 7
program              : 0
statement            : 2 3
statement_list       : 1 3 16 16 17 18 18 19
term                 : 26 27 28 29 30
try_catch            : 6

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statement_list
    (2) statement_list -> . statement
    (3) statement_list -> . statement_list statement
    (4) statement -> . declaration
    (5) statement -> . broadcast_stmt
    (6) statement -> . try_catch
    (7) statement -> . if_stmt
    (8) statement -> . cycle_stmt
    (9) statement -> . NOTES
    (10) declaration -> . YOUARE ID ASSIGNTO expression
    (11) broadcast_stmt -> . BROADCAST broadcast_args
    (16) try_catch -> . TRY statement_list CATCH statement_list END
    (17) if_stmt -> . IF condition statement_list END
    (18) if_stmt -> . IF condition statement_list FALLBACK statement_list END
    (19) cycle_stmt -> . CYCLE condition statement_list END

    NOTES           shift and go to state 9
    YOUARE          shift and go to state 10
    BROADCAST       shift and go to state 11
    TRY             shift and go to state 12
    IF              shift and go to state 13
    CYCLE           shift and go to state 14

    program                        shift and go to state 1
    statement_list                 shift and go to state 2
    statement                      shift and go to state 3
    declaration                    shift and go to state 4
    broadcast_stmt                 shift and go to state 5
    try_catch                      shift and go to state 6
    if_stmt                        shift and go to state 7
    cycle_stmt                     shift and go to state 8

state 1

    (0) S' -> program .



state 2

    (1) program -> statement_list .
    (3) statement_list -> statement_list . statement
    (4) statement -> . declaration
    (5) statement -> . broadcast_stmt
    (6) statement -> . try_catch
    (7) statement -> . if_stmt
    (8) statement -> . cycle_stmt
    (9) statement -> . NOTES
    (10) declaration -> . YOUARE ID ASSIGNTO expression
    (11) broadcast_stmt -> . BROADCAST broadcast_args
    (16) try_catch -> . TRY statement_list CATCH statement_list END
    (17) if_stmt -> . IF condition statement_list END
    (18) if_stmt -> . IF condition statement_list FALLBACK statement_list END
    (19) cycle_stmt -> . CYCLE condition statement_list END

    $end            reduce using rule 1 (program -> statement_list .)
    NOTES           shift and go to state 9
    YOUARE          shift and go to state 10
    BROADCAST       shift and go to state 11
    TRY             shift and go to state 12
    IF              shift and go to state 13
    CYCLE           shift and go to state 14

    statement                      shift and go to state 15
    declaration                    shift and go to state 4
    broadcast_stmt                 shift and go to state 5
    try_catch                      shift and go to state 6
    if_stmt                        shift and go to state 7
    cycle_stmt                     shift and go to state 8

state 3

    (2) statement_list -> statement .

    NOTES           reduce using rule 2 (statement_list -> statement .)
    YOUARE          reduce using rule 2 (statement_list -> statement .)
    BROADCAST       reduce using rule 2 (statement_list -> statement .)
    TRY             reduce using rule 2 (statement_list -> statement .)
    IF              reduce using rule 2 (statement_list -> statement .)
    CYCLE           reduce using rule 2 (statement_list -> statement .)
    $end            reduce using rule 2 (statement_list -> statement .)
    CATCH           reduce using rule 2 (statement_list -> statement .)
    END             reduce using rule 2 (statement_list -> statement .)
    FALLBACK        reduce using rule 2 (statement_list -> statement .)


state 4

    (4) statement -> declaration .

    NOTES           reduce using rule 4 (statement -> declaration .)
    YOUARE          reduce using rule 4 (statement -> declaration .)
    BROADCAST       reduce using rule 4 (statement -> declaration .)
    TRY             reduce using rule 4 (statement -> declaration .)
    IF              reduce using rule 4 (statement -> declaration .)
    CYCLE           reduce using rule 4 (statement -> declaration .)
    $end            reduce using rule 4 (statement -> declaration .)
    CATCH           reduce using rule 4 (statement -> declaration .)
    END             reduce using rule 4 (statement -> declaration .)
    FALLBACK        reduce using rule 4 (statement -> declaration .)


state 5

    (5) statement -> broadcast_stmt .

    NOTES           reduce using rule 5 (statement -> broadcast_stmt .)
    YOUARE          reduce using rule 5 (statement -> broadcast_stmt .)
    BROADCAST       reduce using rule 5 (statement -> broadcast_stmt .)
    TRY             reduce using rule 5 (statement -> broadcast_stmt .)
    IF              reduce using rule 5 (statement -> broadcast_stmt .)
    CYCLE           reduce using rule 5 (statement -> broadcast_stmt .)
    $end            reduce using rule 5 (statement -> broadcast_stmt .)
    CATCH           reduce using rule 5 (statement -> broadcast_stmt .)
    END             reduce using rule 5 (statement -> broadcast_stmt .)
    FALLBACK        reduce using rule 5 (statement -> broadcast_stmt .)


state 6

    (6) statement -> try_catch .

    NOTES           reduce using rule 6 (statement -> try_catch .)
    YOUARE          reduce using rule 6 (statement -> try_catch .)
    BROADCAST       reduce using rule 6 (statement -> try_catch .)
    TRY             reduce using rule 6 (statement -> try_catch .)
    IF              reduce using rule 6 (statement -> try_catch .)
    CYCLE           reduce using rule 6 (statement -> try_catch .)
    $end            reduce using rule 6 (statement -> try_catch .)
    CATCH           reduce using rule 6 (statement -> try_catch .)
    END             reduce using rule 6 (statement -> try_catch .)
    FALLBACK        reduce using rule 6 (statement -> try_catch .)


state 7

    (7) statement -> if_stmt .

    NOTES           reduce using rule 7 (statement -> if_stmt .)
    YOUARE          reduce using rule 7 (statement -> if_stmt .)
    BROADCAST       reduce using rule 7 (statement -> if_stmt .)
    TRY             reduce using rule 7 (statement -> if_stmt .)
    IF              reduce using rule 7 (statement -> if_stmt .)
    CYCLE           reduce using rule 7 (statement -> if_stmt .)
    $end            reduce using rule 7 (statement -> if_stmt .)
    CATCH           reduce using rule 7 (statement -> if_stmt .)
    END             reduce using rule 7 (statement -> if_stmt .)
    FALLBACK        reduce using rule 7 (statement -> if_stmt .)


state 8

    (8) statement -> cycle_stmt .

    NOTES           reduce using rule 8 (statement -> cycle_stmt .)
    YOUARE          reduce using rule 8 (statement -> cycle_stmt .)
    BROADCAST       reduce using rule 8 (statement -> cycle_stmt .)
    TRY             reduce using rule 8 (statement -> cycle_stmt .)
    IF              reduce using rule 8 (statement -> cycle_stmt .)
    CYCLE           reduce using rule 8 (statement -> cycle_stmt .)
    $end            reduce using rule 8 (statement -> cycle_stmt .)
    CATCH           reduce using rule 8 (statement -> cycle_stmt .)
    END             reduce using rule 8 (statement -> cycle_stmt .)
    FALLBACK        reduce using rule 8 (statement -> cycle_stmt .)


state 9

    (9) statement -> NOTES .

    NOTES           reduce using rule 9 (statement -> NOTES .)
    YOUARE          reduce using rule 9 (statement -> NOTES .)
    BROADCAST       reduce using rule 9 (statement -> NOTES .)
    TRY             reduce using rule 9 (statement -> NOTES .)
    IF              reduce using rule 9 (statement -> NOTES .)
    CYCLE           reduce using rule 9 (statement -> NOTES .)
    $end            reduce using rule 9 (statement -> NOTES .)
    CATCH           reduce using rule 9 (statement -> NOTES .)
    END             reduce using rule 9 (statement -> NOTES .)
    FALLBACK        reduce using rule 9 (statement -> NOTES .)


state 10

    (10) declaration -> YOUARE . ID ASSIGNTO expression

    ID              shift and go to state 16


state 11

    (11) broadcast_stmt -> BROADCAST . broadcast_args
    (12) broadcast_args -> . broadcast_arg
    (13) broadcast_args -> . broadcast_args broadcast_arg
    (14) broadcast_arg -> . STRING
    (15) broadcast_arg -> . expression
    (26) expression -> . expression PLUS term
    (27) expression -> . expression MINUS term
    (28) expression -> . term
    (29) term -> . term TIMES factor
    (30) term -> . term DIVIDE factor
    (31) term -> . factor
    (32) factor -> . base POWER factor
    (33) factor -> . base
    (34) base -> . NUMBER
    (35) base -> . ID
    (36) base -> . LT_PARENT expression RT_PARENT

    STRING          shift and go to state 19
    NUMBER          shift and go to state 24
    ID              shift and go to state 25
    LT_PARENT       shift and go to state 26

    broadcast_args                 shift and go to state 17
    broadcast_arg                  shift and go to state 18
    expression                     shift and go to state 20
    term                           shift and go to state 21
    factor                         shift and go to state 22
    base                           shift and go to state 23

state 12

    (16) try_catch -> TRY . statement_list CATCH statement_list END
    (2) statement_list -> . statement
    (3) statement_list -> . statement_list statement
    (4) statement -> . declaration
    (5) statement -> . broadcast_stmt
    (6) statement -> . try_catch
    (7) statement -> . if_stmt
    (8) statement -> . cycle_stmt
    (9) statement -> . NOTES
    (10) declaration -> . YOUARE ID ASSIGNTO expression
    (11) broadcast_stmt -> . BROADCAST broadcast_args
    (16) try_catch -> . TRY statement_list CATCH statement_list END
    (17) if_stmt -> . IF condition statement_list END
    (18) if_stmt -> . IF condition statement_list FALLBACK statement_list END
    (19) cycle_stmt -> . CYCLE condition statement_list END

    NOTES           shift and go to state 9
    YOUARE          shift and go to state 10
    BROADCAST       shift and go to state 11
    TRY             shift and go to state 12
    IF              shift and go to state 13
    CYCLE           shift and go to state 14

    statement_list                 shift and go to state 27
    statement                      shift and go to state 3
    declaration                    shift and go to state 4
    broadcast_stmt                 shift and go to state 5
    try_catch                      shift and go to state 6
    if_stmt                        shift and go to state 7
    cycle_stmt                     shift and go to state 8

state 13

    (17) if_stmt -> IF . condition statement_list END
    (18) if_stmt -> IF . condition statement_list FALLBACK statement_list END
    (20) condition -> . expression EQT expression
    (21) condition -> . expression NEQT expression
    (22) condition -> . expression LT expression
    (23) condition -> . expression GT expression
    (24) condition -> . expression LTE expression
    (25) condition -> . expression GTE expression
    (26) expression -> . expression PLUS term
    (27) expression -> . expression MINUS term
    (28) expression -> . term
    (29) term -> . term TIMES factor
    (30) term -> . term DIVIDE factor
    (31) term -> . factor
    (32) factor -> . base POWER factor
    (33) factor -> . base
    (34) base -> . NUMBER
    (35) base -> . ID
    (36) base -> . LT_PARENT expression RT_PARENT

    NUMBER          shift and go to state 24
    ID              shift and go to state 25
    LT_PARENT       shift and go to state 26

    condition                      shift and go to state 28
    expression                     shift and go to state 29
    term                           shift and go to state 21
    factor                         shift and go to state 22
    base                           shift and go to state 23

state 14

    (19) cycle_stmt -> CYCLE . condition statement_list END
    (20) condition -> . expression EQT expression
    (21) condition -> . expression NEQT expression
    (22) condition -> . expression LT expression
    (23) condition -> . expression GT expression
    (24) condition -> . expression LTE expression
    (25) condition -> . expression GTE expression
    (26) expression -> . expression PLUS term
    (27) expression -> . expression MINUS term
    (28) expression -> . term
    (29) term -> . term TIMES factor
    (30) term -> . term DIVIDE factor
    (31) term -> . factor
    (32) factor -> . base POWER factor
    (33) factor -> . base
    (34) base -> . NUMBER
    (35) base -> . ID
    (36) base -> . LT_PARENT expression RT_PARENT

    NUMBER          shift and go to state 24
    ID              shift and go to state 25
    LT_PARENT       shift and go to state 26

    condition                      shift and go to state 30
    expression                     shift and go to state 29
    term                           shift and go to state 21
    factor                         shift and go to state 22
    base                           shift and go to state 23

state 15

    (3) statement_list -> statement_list statement .

    NOTES           reduce using rule 3 (statement_list -> statement_list statement .)
    YOUARE          reduce using rule 3 (statement_list -> statement_list statement .)
    BROADCAST       reduce using rule 3 (statement_list -> statement_list statement .)
    TRY             reduce using rule 3 (statement_list -> statement_list statement .)
    IF              reduce using rule 3 (statement_list -> statement_list statement .)
    CYCLE           reduce using rule 3 (statement_list -> statement_list statement .)
    $end            reduce using rule 3 (statement_list -> statement_list statement .)
    CATCH           reduce using rule 3 (statement_list -> statement_list statement .)
    END             reduce using rule 3 (statement_list -> statement_list statement .)
    FALLBACK        reduce using rule 3 (statement_list -> statement_list statement .)


state 16

    (10) declaration -> YOUARE ID . ASSIGNTO expression

    ASSIGNTO        shift and go to state 31


state 17

    (11) broadcast_stmt -> BROADCAST broadcast_args .
    (13) broadcast_args -> broadcast_args . broadcast_arg
    (14) broadcast_arg -> . STRING
    (15) broadcast_arg -> . expression
    (26) expression -> . expression PLUS term
    (27) expression -> . expression MINUS term
    (28) expression -> . term
    (29) term -> . term TIMES factor
    (30) term -> . term DIVIDE factor
    (31) term -> . factor
    (32) factor -> . base POWER factor
    (33) factor -> . base
    (34) base -> . NUMBER
    (35) base -> . ID
    (36) base -> . LT_PARENT expression RT_PARENT

    NOTES           reduce using rule 11 (broadcast_stmt -> BROADCAST broadcast_args .)
    YOUARE          reduce using rule 11 (broadcast_stmt -> BROADCAST broadcast_args .)
    BROADCAST       reduce using rule 11 (broadcast_stmt -> BROADCAST broadcast_args .)
    TRY             reduce using rule 11 (broadcast_stmt -> BROADCAST broadcast_args .)
    IF              reduce using rule 11 (broadcast_stmt -> BROADCAST broadcast_args .)
    CYCLE           reduce using rule 11 (broadcast_stmt -> BROADCAST broadcast_args .)
    $end            reduce using rule 11 (broadcast_stmt -> BROADCAST broadcast_args .)
    CATCH           reduce using rule 11 (broadcast_stmt -> BROADCAST broadcast_args .)
    END             reduce using rule 11 (broadcast_stmt -> BROADCAST broadcast_args .)
    FALLBACK        reduce using rule 11 (broadcast_stmt -> BROADCAST broadcast_args .)
    STRING          shift and go to state 19
    NUMBER          shift and go to state 24
    ID              shift and go to state 25
    LT_PARENT       shift and go to state 26

    broadcast_arg                  shift and go to state 32
    expression                     shift and go to state 20
    term                           shift and go to state 21
    factor                         shift and go to state 22
    base                           shift and go to state 23

state 18

    (12) broadcast_args -> broadcast_arg .

    STRING          reduce using rule 12 (broadcast_args -> broadcast_arg .)
    NUMBER          reduce using rule 12 (broadcast_args -> broadcast_arg .)
    ID              reduce using rule 12 (broadcast_args -> broadcast_arg .)
    LT_PARENT       reduce using rule 12 (broadcast_args -> broadcast_arg .)
    NOTES           reduce using rule 12 (broadcast_args -> broadcast_arg .)
    YOUARE          reduce using rule 12 (broadcast_args -> broadcast_arg .)
    BROADCAST       reduce using rule 12 (broadcast_args -> broadcast_arg .)
    TRY             reduce using rule 12 (broadcast_args -> broadcast_arg .)
    IF              reduce using rule 12 (broadcast_args -> broadcast_arg .)
    CYCLE           reduce using rule 12 (broadcast_args -> broadcast_arg .)
    $end            reduce using rule 12 (broadcast_args -> broadcast_arg .)
    CATCH           reduce using rule 12 (broadcast_args -> broadcast_arg .)
    END             reduce using rule 12 (broadcast_args -> broadcast_arg .)
    FALLBACK        reduce using rule 12 (broadcast_args -> broadcast_arg .)


state 19

    (14) broadcast_arg -> STRING .

    STRING          reduce using rule 14 (broadcast_arg -> STRING .)
    NUMBER          reduce using rule 14 (broadcast_arg -> STRING .)
    ID              reduce using rule 14 (broadcast_arg -> STRING .)
    LT_PARENT       reduce using rule 14 (broadcast_arg -> STRING .)
    NOTES           reduce using rule 14 (broadcast_arg -> STRING .)
    YOUARE          reduce using rule 14 (broadcast_arg -> STRING .)
    BROADCAST       reduce using rule 14 (broadcast_arg -> STRING .)
    TRY             reduce using rule 14 (broadcast_arg -> STRING .)
    IF              reduce using rule 14 (broadcast_arg -> STRING .)
    CYCLE           reduce using rule 14 (broadcast_arg -> STRING .)
    $end            reduce using rule 14 (broadcast_arg -> STRING .)
    CATCH           reduce using rule 14 (broadcast_arg -> STRING .)
    END             reduce using rule 14 (broadcast_arg -> STRING .)
    FALLBACK        reduce using rule 14 (broadcast_arg -> STRING .)


state 20

    (15) broadcast_arg -> expression .
    (26) expression -> expression . PLUS term
    (27) expression -> expression . MINUS term

    STRING          reduce using rule 15 (broadcast_arg -> expression .)
    NUMBER          reduce using rule 15 (broadcast_arg -> expression .)
    ID              reduce using rule 15 (broadcast_arg -> expression .)
    LT_PARENT       reduce using rule 15 (broadcast_arg -> expression .)
    NOTES           reduce using rule 15 (broadcast_arg -> expression .)
    YOUARE          reduce using rule 15 (broadcast_arg -> expression .)
    BROADCAST       reduce using rule 15 (broadcast_arg -> expression .)
    TRY             reduce using rule 15 (broadcast_arg -> expression .)
    IF              reduce using rule 15 (broadcast_arg -> expression .)
    CYCLE           reduce using rule 15 (broadcast_arg -> expression .)
    $end            reduce using rule 15 (broadcast_arg -> expression .)
    CATCH           reduce using rule 15 (broadcast_arg -> expression .)
    END             reduce using rule 15 (broadcast_arg -> expression .)
    FALLBACK        reduce using rule 15 (broadcast_arg -> expression .)
    PLUS            shift and go to state 33
    MINUS           shift and go to state 34


state 21

    (28) expression -> term .
    (29) term -> term . TIMES factor
    (30) term -> term . DIVIDE factor

    PLUS            reduce using rule 28 (expression -> term .)
    MINUS           reduce using rule 28 (expression -> term .)
    STRING          reduce using rule 28 (expression -> term .)
    NUMBER          reduce using rule 28 (expression -> term .)
    ID              reduce using rule 28 (expression -> term .)
    LT_PARENT       reduce using rule 28 (expression -> term .)
    NOTES           reduce using rule 28 (expression -> term .)
    YOUARE          reduce using rule 28 (expression -> term .)
    BROADCAST       reduce using rule 28 (expression -> term .)
    TRY             reduce using rule 28 (expression -> term .)
    IF              reduce using rule 28 (expression -> term .)
    CYCLE           reduce using rule 28 (expression -> term .)
    $end            reduce using rule 28 (expression -> term .)
    CATCH           reduce using rule 28 (expression -> term .)
    END             reduce using rule 28 (expression -> term .)
    FALLBACK        reduce using rule 28 (expression -> term .)
    EQT             reduce using rule 28 (expression -> term .)
    NEQT            reduce using rule 28 (expression -> term .)
    LT              reduce using rule 28 (expression -> term .)
    GT              reduce using rule 28 (expression -> term .)
    LTE             reduce using rule 28 (expression -> term .)
    GTE             reduce using rule 28 (expression -> term .)
    RT_PARENT       reduce using rule 28 (expression -> term .)
    TIMES           shift and go to state 35
    DIVIDE          shift and go to state 36


state 22

    (31) term -> factor .

    TIMES           reduce using rule 31 (term -> factor .)
    DIVIDE          reduce using rule 31 (term -> factor .)
    PLUS            reduce using rule 31 (term -> factor .)
    MINUS           reduce using rule 31 (term -> factor .)
    STRING          reduce using rule 31 (term -> factor .)
    NUMBER          reduce using rule 31 (term -> factor .)
    ID              reduce using rule 31 (term -> factor .)
    LT_PARENT       reduce using rule 31 (term -> factor .)
    NOTES           reduce using rule 31 (term -> factor .)
    YOUARE          reduce using rule 31 (term -> factor .)
    BROADCAST       reduce using rule 31 (term -> factor .)
    TRY             reduce using rule 31 (term -> factor .)
    IF              reduce using rule 31 (term -> factor .)
    CYCLE           reduce using rule 31 (term -> factor .)
    $end            reduce using rule 31 (term -> factor .)
    CATCH           reduce using rule 31 (term -> factor .)
    END             reduce using rule 31 (term -> factor .)
    FALLBACK        reduce using rule 31 (term -> factor .)
    EQT             reduce using rule 31 (term -> factor .)
    NEQT            reduce using rule 31 (term -> factor .)
    LT              reduce using rule 31 (term -> factor .)
    GT              reduce using rule 31 (term -> factor .)
    LTE             reduce using rule 31 (term -> factor .)
    GTE             reduce using rule 31 (term -> factor .)
    RT_PARENT       reduce using rule 31 (term -> factor .)


state 23

    (32) factor -> base . POWER factor
    (33) factor -> base .

    POWER           shift and go to state 37
    TIMES           reduce using rule 33 (factor -> base .)
    DIVIDE          reduce using rule 33 (factor -> base .)
    PLUS            reduce using rule 33 (factor -> base .)
    MINUS           reduce using rule 33 (factor -> base .)
    STRING          reduce using rule 33 (factor -> base .)
    NUMBER          reduce using rule 33 (factor -> base .)
    ID              reduce using rule 33 (factor -> base .)
    LT_PARENT       reduce using rule 33 (factor -> base .)
    NOTES           reduce using rule 33 (factor -> base .)
    YOUARE          reduce using rule 33 (factor -> base .)
    BROADCAST       reduce using rule 33 (factor -> base .)
    TRY             reduce using rule 33 (factor -> base .)
    IF              reduce using rule 33 (factor -> base .)
    CYCLE           reduce using rule 33 (factor -> base .)
    $end            reduce using rule 33 (factor -> base .)
    CATCH           reduce using rule 33 (factor -> base .)
    END             reduce using rule 33 (factor -> base .)
    FALLBACK        reduce using rule 33 (factor -> base .)
    EQT             reduce using rule 33 (factor -> base .)
    NEQT            reduce using rule 33 (factor -> base .)
    LT              reduce using rule 33 (factor -> base .)
    GT              reduce using rule 33 (factor -> base .)
    LTE             reduce using rule 33 (factor -> base .)
    GTE             reduce using rule 33 (factor -> base .)
    RT_PARENT       reduce using rule 33 (factor -> base .)


state 24

    (34) base -> NUMBER .

    POWER           reduce using rule 34 (base -> NUMBER .)
    TIMES           reduce using rule 34 (base -> NUMBER .)
    DIVIDE          reduce using rule 34 (base -> NUMBER .)
    PLUS            reduce using rule 34 (base -> NUMBER .)
    MINUS           reduce using rule 34 (base -> NUMBER .)
    STRING          reduce using rule 34 (base -> NUMBER .)
    NUMBER          reduce using rule 34 (base -> NUMBER .)
    ID              reduce using rule 34 (base -> NUMBER .)
    LT_PARENT       reduce using rule 34 (base -> NUMBER .)
    NOTES           reduce using rule 34 (base -> NUMBER .)
    YOUARE          reduce using rule 34 (base -> NUMBER .)
    BROADCAST       reduce using rule 34 (base -> NUMBER .)
    TRY             reduce using rule 34 (base -> NUMBER .)
    IF              reduce using rule 34 (base -> NUMBER .)
    CYCLE           reduce using rule 34 (base -> NUMBER .)
    $end            reduce using rule 34 (base -> NUMBER .)
    CATCH           reduce using rule 34 (base -> NUMBER .)
    END             reduce using rule 34 (base -> NUMBER .)
    FALLBACK        reduce using rule 34 (base -> NUMBER .)
    EQT             reduce using rule 34 (base -> NUMBER .)
    NEQT            reduce using rule 34 (base -> NUMBER .)
    LT              reduce using rule 34 (base -> NUMBER .)
    GT              reduce using rule 34 (base -> NUMBER .)
    LTE             reduce using rule 34 (base -> NUMBER .)
    GTE             reduce using rule 34 (base -> NUMBER .)
    RT_PARENT       reduce using rule 34 (base -> NUMBER .)


state 25

    (35) base -> ID .

    POWER           reduce using rule 35 (base -> ID .)
    TIMES           reduce using rule 35 (base -> ID .)
    DIVIDE          reduce using rule 35 (base -> ID .)
    PLUS            reduce using rule 35 (base -> ID .)
    MINUS           reduce using rule 35 (base -> ID .)
    STRING          reduce using rule 35 (base -> ID .)
    NUMBER          reduce using rule 35 (base -> ID .)
    ID              reduce using rule 35 (base -> ID .)
    LT_PARENT       reduce using rule 35 (base -> ID .)
    NOTES           reduce using rule 35 (base -> ID .)
    YOUARE          reduce using rule 35 (base -> ID .)
    BROADCAST       reduce using rule 35 (base -> ID .)
    TRY             reduce using rule 35 (base -> ID .)
    IF              reduce using rule 35 (base -> ID .)
    CYCLE           reduce using rule 35 (base -> ID .)
    $end            reduce using rule 35 (base -> ID .)
    CATCH           reduce using rule 35 (base -> ID .)
    END             reduce using rule 35 (base -> ID .)
    FALLBACK        reduce using rule 35 (base -> ID .)
    EQT             reduce using rule 35 (base -> ID .)
    NEQT            reduce using rule 35 (base -> ID .)
    LT              reduce using rule 35 (base -> ID .)
    GT              reduce using rule 35 (base -> ID .)
    LTE             reduce using rule 35 (base -> ID .)
    GTE             reduce using rule 35 (base -> ID .)
    RT_PARENT       reduce using rule 35 (base -> ID .)


state 26

    (36) base -> LT_PARENT . expression RT_PARENT
    (26) expression -> . expression PLUS term
    (27) expression -> . expression MINUS term
    (28) expression -> . term
    (29) term -> . term TIMES factor
    (30) term -> . term DIVIDE factor
    (31) term -> . factor
    (32) factor -> . base POWER factor
    (33) factor -> . base
    (34) base -> . NUMBER
    (35) base -> . ID
    (36) base -> . LT_PARENT expression RT_PARENT

    NUMBER          shift and go to state 24
    ID              shift and go to state 25
    LT_PARENT       shift and go to state 26

    expression                     shift and go to state 38
    term                           shift and go to state 21
    factor                         shift and go to state 22
    base                           shift and go to state 23

state 27

    (16) try_catch -> TRY statement_list . CATCH statement_list END
    (3) statement_list -> statement_list . statement
    (4) statement -> . declaration
    (5) statement -> . broadcast_stmt
    (6) statement -> . try_catch
    (7) statement -> . if_stmt
    (8) statement -> . cycle_stmt
    (9) statement -> . NOTES
    (10) declaration -> . YOUARE ID ASSIGNTO expression
    (11) broadcast_stmt -> . BROADCAST broadcast_args
    (16) try_catch -> . TRY statement_list CATCH statement_list END
    (17) if_stmt -> . IF condition statement_list END
    (18) if_stmt -> . IF condition statement_list FALLBACK statement_list END
    (19) cycle_stmt -> . CYCLE condition statement_list END

    CATCH           shift and go to state 39
    NOTES           shift and go to state 9
    YOUARE          shift and go to state 10
    BROADCAST       shift and go to state 11
    TRY             shift and go to state 12
    IF              shift and go to state 13
    CYCLE           shift and go to state 14

    statement                      shift and go to state 15
    declaration                    shift and go to state 4
    broadcast_stmt                 shift and go to state 5
    try_catch                      shift and go to state 6
    if_stmt                        shift and go to state 7
    cycle_stmt                     shift and go to state 8

state 28
